--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title></title>
-        <style></style>
+        <style>
+            .error { color: red; }
+        </style>
     </head>
     <body>
 
